Fix overflow of hotspots

--- a/src/main/content/_assets/css/guide-multipane.css
+++ b/src/main/content/_assets/css/guide-multipane.css
@@ -176,6 +176,7 @@ header {
     letter-spacing:0;
     line-height:24px;
     text-align:left;
+    white-space: pre-wrap;
 }
 
 #guide_content .code_command pre,  #guide_content .code_command code {
